examples/test/testpolicy12235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12235
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key32: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value40
          key3: value21
      podSelector:
        matchLabels:
          key34: value16
          key20: value29
